# Tunnelo

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  layout.jsx  page.jsx
app/components/: LogPanel.jsx  Sidebar.jsx  StatusBadge.jsx  StatusDot.jsx  TunnelCard.jsx  TunnelForm.jsx
app/hooks/: useTunnelEvents.js
app/store/: tunnelStore.js
components/ui/: badge.jsx  dialog.jsx  select.jsx  tooltip.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  models.rs  tunnel_manager.rs
